--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -1967,3 +1967,102 @@ seconds_behind_master 的计算方法是这样的：
 
 ## # 备库为什么会延迟好几个小时？
 MySQL的并行复制策略是解决备库延迟问题的关键。在MySQL 5.5版本中，通过按表和按行分发策略实现多线程复制，但存在一些限制。随着版本的演进，MySQL 5.6和5.7版本新增了按库并行和基于WRITESET的并行复制策略，提高了备库的同步速度。这些策略的实现原理和优缺点都得到了详细介绍，包括对大事务的影响和参数调整的建议。此外，还提到了MariaDB的并行复制策略，以及备库主备延迟表现为45度线段的原因。
+
+在主库上，影响并发度的原因就是各种锁了。由于 InnoDB 引擎支持行锁，除了所有并发事务都在更新同一行（热点行）这种极端场景外，它对业务并发度的支持还是很友好的。所以，你在性能测试的时候会发现，并发压测线程 32 就比单线程时，总体吞吐量高。
+
+而日志在备库上的执行，如果是用单线程的话，就会导致备库应用日志不够快，造成主备延迟。在官方的 5.6 版本之前，MySQL 只支持单线程复制，由此在主库并发高、TPS 高时就会出现严重的主备延迟问题。
+
+从单线程复制到最新版本的多线程复制，中间的演化经历了好几个版本。可以所搜下相关资料。
+
+其实说到底，所有的多线程复制机制，都是要把备库只有一个线程的 sql_thread，拆成多个线程
+
+最新版的 sql_thread, 不再直接更新数据了，只负责读取中转日志和分发事务。真正更新日志的，变成了 worker 线程。而 work 线程的个数，就是由参数 slave_parallel_workers 决定的。根据大神的经验，把这个值设置为 8~16 之间最好（32 核物理机的情况），毕竟备库还有可能要提供读查询，不能把 CPU 都吃光了。
+
+1. 事务能不能按照轮询的方式分发给各个 worker，也就是第一个事务分给 worker_1，第二个事务发给 worker_2 呢？
+其实是不行的。因为，事务被分发给 worker 以后，不同的 worker 就独立执行了。但是，由于 CPU 的调度策略，很可能第二个事务最终比第一个事务先执行。而如果这时候刚好这两个事务更新的是同一行，也就意味着，同一行上的两个事务，在主库和备库上的执行顺序相反，会导致主备不一致的问题。
+
+2. 请再设想一下另外一个问题：同一个事务的多个更新语句，能不能分给不同的 worker 来执行呢？
+答案是，也不行。举个例子，一个事务更新了表 t1 和表 t2 中的各一行，如果这两条更新语句被分到不同 worker 的话，虽然最终的结果是主备一致的，但如果表 t1 执行完成的瞬间，备库上有一个查询，就会看到这个事务“更新了一半的结果”，破坏了事务逻辑的隔离性。
+
+所以，coordinator 在分发的时候，需要满足以下这两个基本要求：
+1. 不能造成更新覆盖。这就要求更新同一行的两个事务，必须被分发到同一个 worker 中。
+2. 同一个事务不能被拆开，必须放到同一个 worker 中。
+
+各个版本的多线程复制，都遵循了这两条基本原则
+
+#### 林晓斌大神的并行复制策略（按表分发策略和按行分发策略）
+官方 MySQL 5.5 版本是不支持并行复制的。但是，在 2012 年的时候，大神自己服务的业务出现了严重的主备延迟，原因就是备库只有单线程复制。然后，大神就先后写了两个版本的并行策略。
+
+1. 按表分发策略
+按表分发事务的基本思路是，如果两个事务更新不同的表，它们就可以并行。因为数据是存储在表里的，所以按表分发，可以保证两个 worker 不会更新同一行。当然，如果有跨表的事务，还是要把两张表放在一起考虑的。
+
+每个 worker 线程对应一个 hash 表，用于保存当前正在这个 worker 的“执行队列”里的事务所涉及的表。hash 表的 key 是“库名. 表名”，value 是一个数字，表示队列中有多少个事务修改这个表。
+
+在有事务分配给 worker 时，事务里面涉及的表会被加到对应的 hash 表中。worker 执行完成后，这个表会被从 hash 表中去掉。
+
+分配事务的大致逻辑就是：
+   1. 先判断一下，有没有work线程在修改 当前事务要修改的表；
+   2. 如果有，且work线程数量大于1（因为一个事务可以有很多条语句，所以修改的表可能不止一个，需要判断每个表是否有work线程在占用），那么就等待；
+   3. 如果只有一个work线程在修改这个表，那么就把这个事务分配给这个work线程；
+   4. 如果没有work修改这个表，那么就随便分配一个work 感觉相当于给表加上了锁，粒度比较大
+
+也就是说，每个事务在分发的时候，跟所有 worker 的冲突关系包括以下三种情况：
+   1. 如果跟所有 worker 都不冲突，coordinator 线程就会把这个事务分配给最空闲的 woker;
+   2. 如果跟多于一个 worker 冲突，coordinator 线程就进入等待状态，直到和这个事务存在冲突关系的 worker 只剩下 1 个；
+   3. 如果只跟一个 worker 冲突，coordinator 线程就会把这个事务分配给这个存在冲突关系的 worker。
+
+**这个按表分发的方案，在多个表负载均匀的场景里应用效果很好。但是，如果碰到热点表，比如所有的更新事务都会涉及到某一个表的时候，所有事务都会被分配到同一个 worker 中，就变成单线程复制了。**
+
+2. 按行分发策略
+要解决热点表的并行复制问题，就需要一个按行并行复制的方案。按行复制的核心思路是：如果两个事务没有更新相同的行，它们在备库上可以并行执行。显然，这个模式要求 binlog 格式必须是 row。
+
+这时候，我们判断一个事务 T 和 worker 是否冲突，用的就规则就不是“修改同一个表”，而是“修改同一行”。
+
+按行复制和按表复制的数据结构差不多，也是为每个 worker，分配一个 hash 表。只是要实现按行分发，这时候的 key，就必须是“库名 + 表名 + 唯一键的值”。
+
+但是，这个“唯一键”只有主键 id 还是不够的，我们还需要考虑下这种场景，表 t1 中除了主键，还有唯一索引 a：
+
+```sql
+CREATE TABLE `t1` (
+  `id` int(11) NOT NULL,
+  `a` int(11) DEFAULT NULL,
+  `b` int(11) DEFAULT NULL,
+  PRIMARY KEY (`id`),
+  UNIQUE KEY `a` (`a`)
+) ENGINE=InnoDB;
+
+insert into t1 values(1,1,1),(2,2,2),(3,3,3),(4,4,4),(5,5,5);
+```
+
+| 事务A | 事务B |
+| ----- | ----- |
+| update t1 set a=6 where id=1; |                                          |
+|                                          | update t1 set a=1 where id=2; |
+
+可以看到，这两个事务要更新的行的主键值不同，但是如果它们被分到不同的 worker，就有可能事务B的语句先执行。这时候 id=1 的行的 a 的值还是 1，就会报唯一键冲突。
+
+因此，基于行的策略，事务 hash 表中还需要考虑唯一键，即 key 应该是“库名 + 表名 + 索引 a 的名字 + a 的值”。
+
+比如，在上面这个例子中，我要在表 t1 上执行 update t1 set a=1 where id=2 语句，在 binlog 里面记录了整行的数据修改前各个字段的值，和修改后各个字段的值。
+
+因此，coordinator 在解析这个语句的 binlog 的时候，这个事务的 hash 表就有三个项:
+   1. key=hash_func(db1+t1+“PRIMARY”+2), value=2; 这里 value=2 是因为修改前后的行 id 值不变，出现了两次。（“PRIMARY”：主键id）
+   2. key=hash_func(db1+t1+“a”+2), value=1，表示会影响到这个表 a=2 的行。
+   3. key=hash_func(db1+t1+“a”+1), value=1，表示会影响到这个表 a=1 的行。
+
+可见，相比于按表并行分发策略，按行并行策略在决定线程分发的时候，需要消耗更多的计算资源。你可能也发现了，这两个方案其实都有一些约束条件：
+   1. 要能够从 binlog 里面解析出表名、主键值和唯一索引的值。也就是说，主库的 binlog 格式必须是 row；
+   2. 表必须有主键；
+   3. 不能有外键。表上如果有外键，级联更新的行不会记录在 binlog 中，这样冲突检测就不准确。
+
+**在执行级联更新时，MySQL执行的是多个SQL语句，而不是单个SQL语句。在二进制日志中，每个SQL语句都被记录为一个单独的事务，因此，MySQL只记录主表的更新语句，而不会记录外键表的更新语句。如果记录了外键表的更新语句，就会导致在恢复数据时，出现与执行顺序不一致的情况，从而导致数据的不一致性。**
+
+3. 对比按表分发和按行分发这两个方案的话，按行分发策略的并行度更高。不过，如果是要操作很多行的大事务的话，按行分发的策略有两个问题：
+   - 耗费内存。比如一个语句要删除 100 万行数据，这时候 hash 表就要记录 100 万个项。
+   - 耗费 CPU。解析 binlog，然后计算 hash 值，对于大事务，这个成本还是很高的。
+
+所以，大神在实现这个策略的时候会设置一个阈值，单个事务如果超过设置的行数阈值（比如，如果单个事务更新的行数超过 10 万行），就暂时退化为单线程模式，退化过程的逻辑大概是这样的：
+   1. coordinator 暂时先 hold 住这个事务；
+   2. 等待所有 worker 都执行完成，变成空队列；
+   3. coordinator 直接执行这个事务；
+   4. 恢复并行模式。
