--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -1965,7 +1965,7 @@ seconds_behind_master 的计算方法是这样的：
 
 所以在满足数据可靠性的前提下，MySQL 高可用系统的可用性，是依赖于主备延迟的。延迟的时间越小，在主库故障的时候，服务恢复需要的时间就越短，可用性就越高。
 
-## # 备库为什么会延迟好几个小时？
+## # 备库为什么会延迟好几个小时？(备库并行复制能力。)
 MySQL的并行复制策略是解决备库延迟问题的关键。在MySQL 5.5版本中，通过按表和按行分发策略实现多线程复制，但存在一些限制。随着版本的演进，MySQL 5.6和5.7版本新增了按库并行和基于WRITESET的并行复制策略，提高了备库的同步速度。这些策略的实现原理和优缺点都得到了详细介绍，包括对大事务的影响和参数调整的建议。此外，还提到了MariaDB的并行复制策略，以及备库主备延迟表现为45度线段的原因。
 
 在主库上，影响并发度的原因就是各种锁了。由于 InnoDB 引擎支持行锁，除了所有并发事务都在更新同一行（热点行）这种极端场景外，它对业务并发度的支持还是很友好的。所以，你在性能测试的时候会发现，并发压测线程 32 就比单线程时，总体吞吐量高。
@@ -2066,3 +2066,74 @@ insert into t1 values(1,1,1),(2,2,2),(3,3,3),(4,4,4),(5,5,5);
    2. 等待所有 worker 都执行完成，变成空队列；
    3. coordinator 直接执行这个事务；
    4. 恢复并行模式。
+
+
+#### MySQL 5.6 版本的并行复制策略
+官方 MySQL5.6 版本，支持了并行复制，只是支持的粒度是按库并行。理解了上面介绍的按表分发策略和按行分发策略，你就理解了，用于决定分发策略的 hash 表里，key 就是数据库名。
+
+这个策略的并行效果，取决于压力模型。如果在主库上有多个 DB，并且各个 DB 的压力均衡，使用这个策略的效果会很好。
+
+相比于按表和按行分发，这个策略有两个优势：
+1. 构造 hash 值的时候很快，只需要库名；而且一个实例上 DB 数也不会很多，不会出现需要构造 100 万个项这种情况。
+2. 不要求 binlog 的格式。因为 statement 格式的 binlog 也可以很容易拿到库名。
+
+但是，如果你的主库上的表都放在同一个 DB 里面，这个策略就没有效果了；或者如果不同 DB 的热点不同，比如一个是业务逻辑库，一个是系统配置库，那也起不到并行的效果。理论上你可以创建不同的 DB，把相同热度的表均匀分到这些不同的 DB 中，强行使用这个策略。不过据我所知，由于需要特地移动数据，这个策略用得并不多。
+
+#### MariaDB 的并行复制策略
+redo log 有组提交 (group commit) 优化， 而 MariaDB 的并行复制策略利用的就是这个特性：
+1. 能够在同一组里提交的事务，一定不会修改同一行；
+2. 主库上可以并行执行的事务，备库上也一定是可以并行执行的。
+
+在实现上，MariaDB 是这么做的：
+1. 在一组里面一起提交的事务，有一个相同的 commit_id，下一组就是 commit_id+1；
+2. commit_id 直接写到 binlog 里面；
+3. 传到备库应用的时候，相同 commit_id 的事务分发到多个 worker 执行；
+4. 这一组全部执行完成后，coordinator 再去取下一批。
+
+当时，这个策略出来的时候是相当惊艳的。因为，之前业界的思路都是在“分析 binlog，并拆分到 worker”上。而 MariaDB 的这个策略，目标是“模拟主库的并行模式”。
+
+但是，这个策略有一个问题，它并没有实现“真正的模拟主库并发度”这个目标。在主库上，一组事务在 commit 的时候，下一组事务是同时处于“执行中”状态的。而在备库上执行的时候，要等第一组事务完全执行完成后，第二组事务才能开始执行，这样系统的吞吐量就不够。
+
+另外，这个方案很容易被大事务拖后腿。假设 trx2 是一个超大事务，那么在备库应用的时候，trx1 和 trx3 执行完成后，就只能等 trx2 完全执行完成，下一组才能开始执行。这段时间，只有一个 worker 线程在工作，是对资源的浪费。
+
+不过即使如此，这个策略仍然是一个很漂亮的创新。因为，它对原系统的改造非常少，实现也很优雅。
+
+#### MySQL 5.7 的并行复制策略
+在 MariaDB 并行复制实现之后，官方的 MySQL5.7 版本也提供了类似的功能，由参数 slave-parallel-type 来控制并行复制策略：
+1. 配置为 DATABASE，表示使用 MySQL 5.6 版本的按库并行策略；
+2. 配置为 LOGICAL_CLOCK，表示的就是类似 MariaDB 的策略。不过，MySQL 5.7 这个策略，针对并行度做了优化。这个优化的思路也很有趣儿。
+
+同时处于“执行状态”的所有事务，是不是可以并行？答案是，不能。
+
+因为，这里面可能有由于锁冲突而处于锁等待状态的事务。如果这些事务在备库上被分配到不同的 worker，就会出现备库跟主库不一致的情况。而上面提到的 MariaDB 这个策略的核心，是“所有处于 commit”状态的事务可以并行。事务处于 commit 状态，表示已经通过了锁冲突的检验了。
+
+通过事务两阶段提交知道，其实，不用等到 commit 阶段，只要能够到达 redo log prepare 阶段，就表示事务已经通过锁冲突的检验了。
+
+因此，MySQL 5.7 并行复制策略的思想是：
+1. 同时处于 prepare 状态的事务，在备库执行时是可以并行的；
+2. 处于 prepare 状态的事务，与处于 commit 状态的事务之间，在备库执行时也是可以并行的。
+
+binlog 的组提交里，有两个参数：
+1. binlog_group_commit_sync_delay 参数，表示延迟多少微秒后才调用 fsync;
+2. binlog_group_commit_sync_no_delay_count 参数，表示累积多少次以后才调用 fsync。
+
+这两个参数是用于故意拉长 binlog 从 write 到 fsync 的时间，以此减少 binlog 的写盘次数。在 MySQL 5.7 的并行复制策略里，它们可以用来制造更多的“同时处于 prepare 阶段的事务”。这样就增加了备库复制的并行度。
+
+也就是说，这两个参数，既可以“故意”让主库提交得慢些，又可以让备库执行得快些。在 MySQL 5.7 处理备库延迟的时候，可以考虑调整这两个参数值，来达到提升备库复制并发度的目的。
+
+#### MySQL 5.7.22 的并行复制策略
+在 2018 年 4 月份发布的 MySQL 5.7.22 版本里，MySQL 增加了一个新的并行复制策略，基于 WRITESET 的并行复制。
+
+相应地，新增了一个参数 binlog-transaction-dependency-tracking，用来控制是否启用这个新策略。这个参数的可选值有以下三种。
+1. COMMIT_ORDER，表示的就是前面介绍的，根据同时进入 prepare 和 commit 来判断是否可以并行的策略。
+2. WRITESET，表示的是对于事务涉及更新的每一行，计算出这一行的 hash 值，组成集合 writeset。如果两个事务没有操作相同的行，也就是说它们的 writeset 没有交集，就可以并行。
+3. WRITESET_SESSION，是在 WRITESET 的基础上多了一个约束，即在主库上同一个线程先后执行的两个事务，在备库执行的时候，要保证相同的先后顺序。
+
+当然为了唯一标识，这个 hash 值是通过“库名 + 表名 + 索引名 + 值”计算出来的。如果一个表上除了有主键索引外，还有其他唯一索引，那么对于每个唯一索引，insert 语句对应的 writeset 就要多增加一个 hash 值。
+
+这个跟上面大神的方法很像，不过，MySQL 官方的这个实现还是有很大区别的：
+1. writeset 是在主库生成后直接写入到 binlog 里面的，这样在备库执行的时候，不需要解析 binlog 内容（event 里的行数据），节省了很多计算量；
+2. 不需要把整个事务的 binlog 都扫一遍才能决定分发到哪个 worker，更省内存；
+3. 由于备库的分发策略不依赖于 binlog 内容，所以 binlog 是 statement 格式也是可以的。
+
+因此，MySQL 5.7.22 的并行复制策略在通用性上还是有保证的。当然，对于“表上没主键”和“外键约束”的场景，WRITESET 策略也是没法并行的，也会暂时退化为单线程模型。
