--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -2137,3 +2137,159 @@ binlog 的组提交里，有两个参数：
 3. 由于备库的分发策略不依赖于 binlog 内容，所以 binlog 是 statement 格式也是可以的。
 
 因此，MySQL 5.7.22 的并行复制策略在通用性上还是有保证的。当然，对于“表上没主键”和“外键约束”的场景，WRITESET 策略也是没法并行的，也会暂时退化为单线程模型。
+
+
+## # 主库出问题了，从库怎么办？（一主多从）
+今天要讨论的就是，在一主多从架构下，主库故障后的主备切换问题。
+
+#### 基于位点的主备切换
+当我们把从节点的主节点设置成新的主节点时，需要执行一条 change master 命令：
+```sh
+CHANGE MASTER TO 
+MASTER_HOST=$host_name 
+MASTER_PORT=$port 
+MASTER_USER=$user_name 
+MASTER_PASSWORD=$password 
+MASTER_LOG_FILE=$master_log_name 
+MASTER_LOG_POS=$master_log_pos  
+```
+这条命令有这么 6 个参数：
+- MASTER_HOST、MASTER_PORT、MASTER_USER 和 MASTER_PASSWORD 四个参数，分别代表了新主库的 IP、端口、用户名和密码。
+- 最后两个参数 MASTER_LOG_FILE 和 MASTER_LOG_POS 表示，要从主库的 master_log_name 文件的 master_log_pos 这个位置的日志继续同步。而这个位置就是所谓的同步位点，也就是主库对应的文件名和日志偏移量。
+
+这两个参数到底应该怎么设置呢？
+原来节点 B 是 A 的从库，本地记录的也是 A 的位点。但是相同的日志，A 的位点和 新主库 A' 的位点是不同的。因此，从库 B 要切换的时候，就需要先经过“找同步位点”这个逻辑。这个位点很难精确取到，只能取一个大概位置。
+
+一种取同步位点的方法是这样的：
+1. 等待新主库 A' 把中转日志（relay log）全部同步完成；
+2. 在 A’上执行 show master status 命令，得到当前 A' 上最新的 File 和 Position；
+3. 取原主库 A 故障的时刻 T；
+4. 用 mysqlbinlog 工具解析 A' 的 File，得到 T 时刻的位点。 ``` mysqlbinlog File --stop-datetime=T --start-datetime=T ```
+
+当然这个值并不精确。为什么呢？
+可以设想有这么一种情况，假设在 T 这个时刻，主库 A 已经执行完成了一个 insert 语句插入了一行数据 R，并且已经将 binlog 传给了 A' 和 B，然后在传完的瞬间主库 A 的主机就掉电了。
+
+那么，这时候系统的状态是这样的：
+1. 在从库 B 上，由于同步了 binlog， R 这一行已经存在；
+2. 在新主库 A' 上， R 这一行也已经存在，日志是写在 123 这个位置之后的；
+3. 在从库 B 上执行 change master 命令，指向 A’的 File 文件的 123 位置，就会把插入 R 这一行数据的 binlog 又同步到从库 B 去执行。
+这时候，从库 B 的同步线程就会报告 Duplicate entry ‘id_of_R’ for key ‘PRIMARY’ 错误，提示出现了主键冲突，然后停止同步。
+
+所以，通常情况下，我们在切换任务的时候，要先主动跳过这些错误，有两种常用的方法。
+1. 一种做法是，使用命令主动跳过一个事务。
+2. 另外一种方式是，通过设置 slave_skip_errors 参数，直接设置跳过指定的错误。
+
+在执行主备切换时，有这么两类错误，是经常会遇到的：
+1. 1062 错误是插入数据时唯一键冲突；
+2. 1032 错误是删除数据时找不到行。
+因此，我们可以把 slave_skip_errors 设置为 “1032,1062”，这样中间碰到这两个错误时就直接跳过。
+
+这里需要注意的是，这种直接跳过指定错误的方法，针对的是主备切换时，由于找不到精确的同步位点，所以只能采用这种方法来创建从库和新主库的主备关系。
+
+这个背景是，我们很清楚在主备切换过程中，直接跳过 1032 和 1062 这两类错误是无损的，所以才可以这么设置 slave_skip_errors 参数。等到主备间的同步关系建立完成，并稳定执行一段时间之后，我们还需要把这个参数设置为空，以免之后真的出现了主从数据不一致，也跳过了。
+
+
+#### GTID
+通过 sql_slave_skip_counter 跳过事务和通过 slave_skip_errors 忽略错误的方法，虽然都最终可以建立从库 B 和新主库 A' 的主备关系，但这两种操作都很复杂，而且容易出错。所以，MySQL 5.6 版本引入了 GTID，彻底解决了这个困难。
+
+GTID 到底是什么意思，又是如何解决找同步位点这个问题呢？
+
+GTID 的全称是 Global Transaction Identifier，也就是全局事务 ID，是一个事务在提交的时候生成的，是这个事务的唯一标识。它由两部分组成，格式是：GTID=server_uuid:gno
+1. server_uuid 是一个实例第一次启动时自动生成的，是一个全局唯一的值；
+2. gno 是一个整数，初始值是 1，每次提交事务的时候分配给这个事务，并加 1。
+
+在 MySQL 的官方文档里，GTID 格式是这么定义的：GTID=source_id:transaction_id
+
+这里的 source_id 就是 server_uuid；而后面的这个 transaction_id，个人觉得容易造成误导，所以改成了 gno。为什么说使用 transaction_id 容易造成误解呢？
+
+因为，在 MySQL 里面我们说 transaction_id 就是指事务 id，事务 id 是在事务执行过程中分配的，如果这个事务回滚了，事务 id 也会递增，而 gno 是在事务提交的时候才会分配。从效果上看，GTID 往往是连续的，因此用 gno 来表示更容易理解。
+
+GTID 模式的启动也很简单，只需要在启动一个 MySQL 实例的时候，加上参数 gtid_mode=on 和 enforce_gtid_consistency=on 就可以了。
+
+在 GTID 模式下，每个事务都会跟一个 GTID 一一对应。这个 GTID 有两种生成方式，而使用哪种方式取决于 session 变量 gtid_next 的值。
+1. 如果 gtid_next=automatic，代表使用默认值。这时，MySQL 就会把 server_uuid:gno 分配给这个事务。a. 记录 binlog 的时候，先记录一行 SET @@SESSION.GTID_NEXT=‘server_uuid:gno’;b. 把这个 GTID 加入本实例的 GTID 集合。
+
+2. 如果 gtid_next 是一个指定的 GTID 的值，比如通过 set gtid_next='current_gtid’指定为 current_gtid，那么就有两种可能：a. 如果 current_gtid 已经存在于实例的 GTID 集合中，接下来执行的这个事务会直接被系统忽略；b. 如果 current_gtid 没有存在于实例的 GTID 集合中，就将这个 current_gtid 分配给接下来要执行的事务，也就是说系统不需要给这个事务生成新的 GTID，因此 gno 也不用加 1。
+
+注意，一个 current_gtid 只能给一个事务使用。这个事务提交后，如果要执行下一个事务，就要执行 set 命令，把 gtid_next 设置成另外一个 gtid 或者 automatic。
+
+这样，每个 MySQL 实例都维护了一个 GTID 集合，用来对应“这个实例执行过的所有事务”。
+
+#### 基于 GTID 的主备切换
+理解了 GTID 的概念，再来看看基于 GTID 的主备复制的用法。
+
+在 GTID 模式下，备库 B 要设置为新主库 A' 的从库的语法如下：
+```sql
+CHANGE MASTER TO 
+MASTER_HOST=$host_name 
+MASTER_PORT=$port 
+MASTER_USER=$user_name 
+MASTER_PASSWORD=$password 
+master_auto_position=1 
+```
+其中，master_auto_position=1 就表示这个主备关系使用的是 GTID 协议。可以看到，前面头疼不已的 MASTER_LOG_FILE 和 MASTER_LOG_POS 参数，已经不需要指定了。
+
+把现在这个时刻，实例 A' 的 GTID 集合记为 set_a，实例 B 的 GTID 集合记为 set_b。接下来，看看现在的主备切换逻辑。
+
+在实例 B 上执行 start slave 命令，取 binlog 的逻辑是这样的：
+1. 实例 B 指定主库 A'，基于主备协议建立连接。
+2. 实例 B 把 set_b 发给主库 A'。
+3. 实例 A' 算出 set_a 与 set_b 的差集，也就是所有存在于 set_a，但是不存在于 set_b 的 GTID 的集合，判断 A' 本地是否包含了这个差集需要的所有 binlog 事务。
+   - a. 如果不包含，表示 A' 已经把实例 B 需要的 binlog 给删掉了，直接返回错误；
+   - b. 如果确认全部包含，A' 从自己的 binlog 文件里面，找出第一个不在 set_b 的事务，发给 B；
+4. 之后就从这个事务开始，往后读文件，按顺序取 binlog 发给 B 去执行。
+
+其实，这个逻辑里面包含了一个设计思想：在基于 GTID 的主备关系里，系统认为只要建立主备关系，就必须保证主库发给备库的日志是完整的。因此，如果实例 B 需要的日志已经不存在，A' 就拒绝把日志发给 B。
+
+这跟基于位点的主备协议不同。基于位点的协议，是由备库决定的，备库指定哪个位点，主库就发哪个位点，不做日志的完整性判断。
+
+其实，严谨地说，主备切换不是不需要找位点了，而是找位点这个工作，在实例 A’内部就已经自动完成了。但由于这个工作是自动的，所以对 HA 系统的开发人员来说，非常友好。
+
+之后这个系统就由新主库 A' 写入，主库 A'的自己生成的 binlog 中的 GTID 集合格式是：server_uuid_of_A':1-M。
+
+如果之前从库 B 的 GTID 集合格式是 server_uuid_of_A:1-N， 那么切换之后 GTID 集合的格式就变成了 server_uuid_of_A:1-N, server_uuid_of_A':1-M。
+
+当然，主库 A' 之前也是 A 的备库，因此主库 A' 和从库 B 的 GTID 集合是一样的。这就达到了想要的预期。
+
+#### GTID 和在线 DDL
+主库如果由于索引缺失引起的性能问题，可以通过在线加索引来解决。但是，考虑到要避免新增索引对主库性能造成的影响，我们可以先在备库加索引，然后再切换。在双 M 结构下，备库执行的 DDL 语句也会传给主库，为了避免传回后对主库造成影响，要通过 set sql_log_bin=off 关掉 binlog。
+
+这样操作的话，数据库里面是加了索引，但是 binlog 并没有记录下这一个更新，是不是会导致数据和日志不一致？
+
+假设，这两个互为主备关系的库是实例 X 和实例 Y，且当前主库是 X，并且都打开了 GTID 模式。这时的主备切换流程可以变成下面这样：
+1. 在实例 X 上执行 stop slave。
+2. 在实例 Y 上执行 DDL 语句。注意，这里并不需要关闭 binlog。
+3. 执行完成后，查出这个 DDL 语句对应的 GTID，并记为 server_uuid_of_Y:gno。
+4. 到实例 X 上执行以下语句序列：
+   ```sql
+   set GTID_NEXT="server_uuid_of_Y:gno";
+   begin;
+   commit;
+   set gtid_next=automatic;
+   start slave;
+   ```
+   这样做的目的在于，既可以让实例 Y 的更新有 binlog 记录，同时也可以确保不会在实例 X 上执行这条更新。
+5. 接下来，执行完主备切换，然后照着上述流程再执行一遍即可。
+
+
+#### Anonymous Gtid
+‌Anonymous_GTID‌是MySQL中一种特殊的GTID（Global Transaction Identifier）类型，用于在复制过程中标识事务。Anonymous_GTID与传统的GTID（Gtid_log_event）不同，它不包含服务器UUID，而是使用一个匿名的标识符来标识事务。
+
+1. Anonymous_GTID的工作原理
+Anonymous_GTID在MySQL 5.7版本中引入，主要用于解决某些特定场景下的复制问题。它通过生成一个匿名的GTID来标识事务，这个匿名GTID不包含服务器的UUID，而是由事务ID和匿名标识符组成。这种方式在分布式环境中尤其有用，因为它可以减少网络传输的数据量，并且简化复制过程中的事务处理‌
+
+2. Anonymous_GTID主要用于以下场景：
+   - ‌分布式环境‌：在分布式数据库环境中，使用Anonymous_GTID可以减少网络传输的数据量，提高复制效率。
+   - ‌大规模数据迁移‌：在进行大规模数据迁移时，使用Anonymous_GTID可以简化复制过程，减少因UUID差异导致的复制问题。
+   - ‌特定的复制需求‌：在某些特定的复制需求中，使用Anonymous_GTID可以提供更灵活的复制控制。
+
+3. Anonymous_GTID的配置和使用方法
+要使用Anonymous_GTID，需要在MySQL配置文件中进行相应的设置。以下是一些关键配置项：
+   - gtid_mode=ON：启用GTID模式。
+   - enforce_gtid_consistency=ON：强制GTID一致性。
+   - log_slave_updates=ON：在从服务器上记录更新操作。
+   - slave-parallel-type=LOGICAL_CLOCK：支持事务级别的并行复制。
+   - slave-parallel-workers=16：设置并行回放线程数，通常设置为CPU核心数的一半。
+
+
+## # 读写分离有哪些坑？
