--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -2293,3 +2293,101 @@ Anonymous_GTID在MySQL 5.7版本中引入，主要用于解决某些特定场景
 
 
 ## # 读写分离有哪些坑？
+读写分离的主要目标就是分摊主库的压力。
+1. 一种是客户端（client）主动做负载均衡，这种模式下一般会把数据库的连接信息放在客户端的连接层。也就是说，由客户端来选择后端数据库进行查询。
+2. 还有一种架构是，在 MySQL 和客户端之间有一个中间代理层 proxy，客户端只连接 proxy， 由 proxy 根据请求类型和上下文决定请求的分发路由。
+
+客户端直连和带 proxy 的读写分离架构，各有哪些特点。
+1. 客户端直连方案，因为少了一层 proxy 转发，所以查询性能稍微好一点儿，并且整体架构简单，排查问题更方便。但是这种方案，由于要了解后端部署细节，所以在出现主备切换、库迁移等操作的时候，客户端都会感知到，并且需要调整数据库连接信息。你可能会觉得这样客户端也太麻烦了，信息大量冗余，架构很丑。其实也未必，一般采用这样的架构，一定会伴随一个负责管理后端的组件，比如 Zookeeper（用zk或者etcd管理元数据，有变动比如离线什么的可以回调；观察者模式），尽量让业务端只专注于业务逻辑开发。
+
+2. 带 proxy 的架构，对客户端比较友好。客户端不需要关注后端细节，连接维护、后端信息维护等工作，都是由 proxy 完成的。但这样的话，对后端维护团队的要求会更高。而且，proxy 也需要有高可用架构。因此，带 proxy 架构的整体就相对比较复杂。
+
+理解了这两种方案的优劣，具体选择哪个方案就取决于数据库团队提供的能力了。但目前看，趋势是往带 proxy 的架构方向发展的。
+
+但是，不论使用哪种架构，都会碰到这些问题：由于主从可能存在延迟，客户端执行完一个更新事务后马上发起查询，如果查询选择的是从库的话，就有可能读到刚刚的事务更新之前的状态。
+
+这种“在从库上会读到系统的一个过期状态”的现象，下面暂且称之为“过期读”。
+
+前面说过了几种可能导致主备延迟的原因，以及对应的优化策略，但是主从延迟还是不能 100% 避免的。
+
+不论哪种结构，客户端都希望查询从库的数据结果，跟查主库的数据结果是一样的。
+
+#### 那么怎么处理过期读问题呢？
+1. 强制走主库方案；
+2. sleep 方案；
+3. 判断主备无延迟方案；
+4. 配合 semi-sync 方案；
+5. 等主库位点方案；
+6. 等 GTID 方案。
+
+#### 强制走主库方案
+强制走主库方案其实就是，将查询请求做分类。通常情况下，我们可以将查询请求分为这么两类：
+1. 对于必须要拿到最新结果的请求，强制将其发到主库上。
+2. 对于可以读到旧数据的请求，才将其发到从库上。
+这个方案最大的问题在于，有时候你会碰到“所有查询都不能是过期读”的需求，比如一些金融类的业务。这样的话，你就要放弃读写分离，所有读写压力都在主库，等同于放弃了扩展性。
+
+#### Sleep 方案
+主库更新后，读从库之前先 sleep 一下。具体的方案就是，类似于执行一条 select sleep(1) 命令。这个方案的假设是，大多数情况下主备延迟在 1 秒之内，做一个 sleep 可以有很大概率拿到最新的数据。这个方案给人的第一感觉是太不靠谱了，从严格意义上来说，这个方案存在的问题就是不精确。
+1. 如果这个查询请求本来 0.5 秒就可以在从库上拿到正确结果，也会等 1 秒；
+2. 如果延迟超过 1 秒，还是会出现过期读。
+
+#### 判断主备无延迟方案
+要确保备库无延迟，通常有三种做法。
+1. 我们知道 show slave status 结果里的 seconds_behind_master 参数的值，可以用来衡量主备延迟时间的长短。所以第一种确保主备无延迟的方法是，每次从库执行查询请求前，先判断 seconds_behind_master 是否已经等于 0。如果还不等于 0 ，那就必须等到这个参数变为 0 才能执行查询请求。
+
+2. 第二种方法，对比位点确保主备无延迟：Master_Log_File 和 Read_Master_Log_Pos，表示的是读到的主库的最新位点；Relay_Master_Log_File 和 Exec_Master_Log_Pos，表示的是备库执行的最新位点。如果 Master_Log_File 和 Relay_Master_Log_File、Read_Master_Log_Pos 和 Exec_Master_Log_Pos 这两组值完全相同，就表示接收到的日志已经同步完成。
+
+3. 第三种方法，对比 GTID 集合确保主备无延迟：
+   - Auto_Position=1 ，表示这对主备关系使用了 GTID 协议。
+   - Retrieved_Gtid_Set，是备库收到的所有日志的 GTID 集合；
+   - Executed_Gtid_Set，是备库所有已经执行完成的 GTID 集合。
+
+如果这两个集合相同，也表示备库接收到的日志都已经同步完成。
+
+可见，对比位点和对比 GTID 这两种方法，都要比判断 seconds_behind_master 是否为 0 更准确。
+
+在执行查询请求之前，先判断从库是否同步完成的方法，相比于 sleep 方案，准确度确实提升了不少，但还是没有达到“精确”的程度。
+
+回顾下，一个事务的 binlog 在主备库之间的状态：
+1. 主库执行完成，写入 binlog，并反馈给客户端；
+2. binlog 被从主库发送给备库，备库收到；
+3. 在备库执行 binlog 完成。
+上面判断主备无延迟的逻辑，是“备库收到的日志都执行完成了”。但是，从 binlog 在主备之间状态的分析中，不难看出还有一部分日志，处于客户端已经收到提交确认，而备库还没收到日志的状态。
+
+如果这时候你在从库 B 上执行查询请求，按照我们上面的逻辑，从库认为已经没有同步延迟，但还是查不到 trx3 的。严格地说，就是出现了过期读。
+
+#### 配合 semi-sync
+要解决上面的问题，就要引入半同步复制，也就是 semi-sync replication。
+semi-sync 做了这样的设计：
+1. 事务提交的时候，主库把 binlog 发给从库；
+2. 从库收到 binlog 以后，发回给主库一个 ack，表示收到了；
+3. 主库收到这个 ack 以后，才能给客户端返回“事务完成”的确认。
+
+也就是说，如果启用了 semi-sync，就表示所有给客户端发送过确认的事务，都确保了备库已经收到了这个日志。
+
+但是，semi-sync+ 位点判断的方案，只对一主一备的场景是成立的。在一主多从场景中，主库只要等到一个从库的 ack，就开始给客户端返回确认。
+
+其实，判断同步位点的方案还有另外一个潜在的问题，即：如果在业务更新的高峰期，主库的位点或者 GTID 集合更新很快，那么上面的两个位点等值判断就会一直不成立，很可能出现从库上迟迟无法响应查询请求的情况。
+
+semi-sync 配合判断主备无延迟的方案，存在两个问题：
+1. 一主多从的时候，在某些从库执行查询请求会存在过期读的现象；
+2. 在持续延迟的情况下，可能出现过度等待的问题。
+
+
+#### 等主库位点方案
+等主库位点方案，就可以解决这两个问题。
+
+```sql
+select master_pos_wait(file, pos[, timeout]);
+```
+这条命令的逻辑如下：
+1. 它是在从库执行的；
+2. 参数 file 和 pos 指的是主库上的文件名和位置；
+3. timeout 可选，设置为正整数 N 表示这个函数最多等待 N 秒。
+
+这个命令正常返回的结果是一个正整数 M，表示从命令开始执行，到应用完 file 和 pos 表示的 binlog 位置，执行了多少事务。
+
+当然，除了正常返回一个正整数 M 外，这条命令还会返回一些其他结果，包括：
+1. 如果执行期间，备库同步线程发生异常，则返回 NULL；
+2. 如果等待超过 N 秒，就返回 -1；
+3. 如果刚开始执行的时候，就发现已经执行过这个位置了，则返回 0。
