--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -2944,3 +2944,103 @@ show engine innodb status 执行结果几个关键信息：
 
 
 ## # 误删数据后除了跑路，还能怎么办？
+
+MySQL 是有高可用架构的。当然，传统的高可用架构是不能预防误删数据的，因为主库的一个 drop table 命令，会通过 binlog 传给所有从库和级联从库，进而导致整个集群的实例都会执行这个命令。
+
+先对和 MySQL 相关的误删数据，做下分类：
+1. 使用 delete 语句误删数据行；
+2. 使用 drop table 或者 truncate table 语句误删数据表；
+3. 使用 drop database 语句误删数据库；
+4. 使用 rm 命令误删整个 MySQL 实例。
+
+#### 误删行
+如果是使用 delete 语句误删了数据行，可以用 Flashback 工具通过闪回把数据恢复回来。
+
+Flashback 恢复数据的原理，是修改 binlog 的内容，拿回原库重放。而能够使用这个方案的前提是，需要确保 binlog_format=row 和 binlog_row_image=FULL。
+
+1. 对于 insert 语句，对应的 binlog event 类型是 Write_rows event，把它改成 Delete_rows event 即可；
+2. 同理，对于 delete 语句，也是将 Delete_rows event 改为 Write_rows event；
+3. 而如果是 Update_rows 的话，binlog 里面记录了数据行修改前和修改后的值，对调这两行的位置即可。
+4. 如果误删数据涉及到了多个事务的话，需要将事务的顺序调过来再执行。
+
+需要说明的是，不建议直接在主库上执行这些操作。恢复数据比较安全的做法，是恢复出一个备份，或者找一个从库作为临时库，在这个临时库上执行这些操作，然后再将确认过的临时库的数据，恢复回主库。
+
+这是因为，一个在执行线上逻辑的主库，数据状态的变更往往是有关联的。可能由于发现数据问题的时间晚了一点儿，就导致已经在之前误操作的基础上，业务代码逻辑又继续修改了其他数据。所以，如果这时候单独恢复这几行数据，而又未经确认的话，就可能会出现对数据的二次破坏。
+
+5. 更重要是要做到事前预防：
+   - 把 sql_safe_updates 参数设置为 on。这样一来，如果我们忘记在 delete 或者 update 语句中写 where 条件，或者 where 条件里面没有包含索引字段的话，这条语句的执行就会报错。
+   - 代码上线前，必须经过 SQL 审计（DBA审核等待）。
+
+6. 注意删除全表不要使用 where id>=0
+因为 delete 全表是很慢的，需要生成回滚日志、写 redo、写 binlog。所以，从性能角度考虑，你应该优先考虑使用 truncate table 或者 drop table 命令。
+
+但使用 truncate /drop table 和 drop database 命令删除的数据，就没办法通过 Flashback 来恢复了。为什么呢？
+
+这是因为，即使我们配置了 binlog_format=row，执行这三个命令时，记录的 binlog 还是 statement 格式。binlog 里面就只有一个 truncate/drop 语句，这些信息是恢复不出数据的。
+
+#### 误删库 / 表
+这种情况下，要想恢复数据，就需要使用全量备份，加增量日志的方式了。这个方案要求线上有定期的全量备份，并且实时备份 binlog。
+
+在这两个条件都具备的情况下，假如有人中午 12 点误删了一个库，恢复数据的流程如下：
+1. 取最近一次全量备份，假设这个库是一天一备，上次备份是当天 0 点；
+2. 用备份恢复出一个临时库；
+3. 从日志备份里面，取出凌晨 0 点之后的日志；
+4. 把这些日志，除了误删除数据的语句外，全部应用到临时库。
+
+说明如下几点：
+1. 为了加速数据恢复，如果这个临时库上有多个数据库，可以在使用 mysqlbinlog 命令时，加上一个–database 参数，用来指定误删表所在的库。这样，就避免了在恢复数据时还要应用其他库日志的情况。
+2. 在应用日志的时候，需要跳过 12 点误操作的那个语句的 binlog：
+   - 如果原实例没有使用 GTID 模式，只能在应用到包含 12 点的 binlog 文件的时候，先用–stop-position 参数执行到误操作之前的日志，然后再用–start-position 从误操作之后的日志继续执行；
+   - 如果实例使用了 GTID 模式，就方便多了。假设误操作命令的 GTID 是 gtid1，那么只需要执行 set gtid_next=gtid1;begin;commit; 先把这个 GTID 加到临时实例的 GTID 集合，之后按顺序执行 binlog 的时候，就会自动跳过误操作的语句。
+
+不过，即使这样，使用 mysqlbinlog 方法恢复数据还是不够快，主要原因有两个：
+1. 如果是误删表，最好就是只恢复出这张表，也就是只重放这张表的操作，但是 mysqlbinlog 工具并不能指定只解析一个表的日志；
+2. 用 mysqlbinlog 解析出日志应用，应用日志的过程就只能是单线程。并行复制在这里都用不上。
+
+一种加速的方法是，在用备份恢复出临时实例之后，将这个临时实例设置成线上备库的从库，这样：
+1. 在 start slave 之前，先通过执行 ```change replication filter replicate_do_table = (tbl_name) ``` 命令，就可以让临时库只同步误操作的表；
+2. 这样做也可以用上并行复制技术，来加速整个数据恢复过程。
+
+
+不论是把 mysqlbinlog 工具解析出的 binlog 文件应用到临时库，还是把临时库接到备库上，这两个方案的共同点是：误删库或者表后，恢复数据的思路主要就是通过备份，再加上应用 binlog 的方式。
+
+也就是说，这两个方案都要求备份系统定期备份全量日志，而且需要确保 binlog 在被从本地删除之前已经做了备份。但是，一个系统不可能备份无限的日志，还需要根据成本和磁盘空间资源，设定一个日志保留的天数。如果 DBA 团队告诉你，可以保证把某个实例恢复到半个月内的任意时间点，这就表示备份系统保留的日志时间就至少是半个月。
+
+另外，建议不论使用上述哪种方式，都要把这个数据恢复功能做成自动化工具，并且经常拿出来演练。为什么这么说呢？
+1. 虽然“发生这种事，大家都不想的”，但是万一出现了误删事件，能够快速恢复数据，将损失降到最小，也应该不用跑路了。
+2. 而如果临时再手忙脚乱地手动操作，最后又误操作了，对业务造成了二次伤害，那就说不过去了。
+
+#### 延迟复制备库
+虽然可以通过利用并行复制来加速恢复数据的过程，但是这个方案仍然存在“恢复时间不可控”的问题。
+
+如果一个库的备份特别大，或者误操作的时间距离上一个全量备份的时间较长，比如一周一备的实例，在备份之后的第 6 天发生误操作，那就需要恢复 6 天的日志，这个恢复时间可能是要按天来计算的。
+
+那么，有什么方法可以缩短恢复数据需要的时间呢？
+
+如果有非常核心的业务，不允许太长的恢复时间，我们可以考虑搭建延迟复制的备库。这个功能是 MySQL 5.6 版本引入的。
+
+一般的主备复制结构存在的问题是，如果主库上有个表被误删了，这个命令很快也会被发给所有从库，进而导致所有从库的数据表也都一起被误删了。
+
+延迟复制的备库是一种特殊的备库，通过 CHANGE MASTER TO MASTER_DELAY = N 命令，可以指定这个备库持续保持跟主库有 N 秒的延迟。
+
+比如把 N 设置为 3600，这就代表了如果主库上有数据被误删了，并且在 1 小时内发现了这个误操作命令，这个命令就还没有在这个延迟复制的备库执行。这时候到这个备库上执行 stop slave，再通过之上面的方法，跳过误操作命令，就可以恢复出需要的数据。
+
+这样的话，你就随时可以得到一个，只需要最多再追 1 小时，就可以恢复出数据的临时实例，也就缩短了整个数据恢复需要的时间。
+
+#### 预防误删库 / 表的方法（一些减少误删操作风险的建议）
+- 账号分离。这样做的目的是，避免写错命令。比如：
+   1. 只给业务开发同学 DML 权限，而不给 truncate/drop 权限。如果业务开发人员有 DDL 需求的话，也可以通过开发管理系统得到支持。
+   2. 即使是 DBA 团队成员，日常也都规定只使用只读账号，必要的时候才使用有更新权限的账号。
+- 制定操作规范。这样做的目的，是避免写错要删除的表名
+   1. 在删除数据表之前，必须先对表做改名操作。然后，观察一段时间，确保对业务无影响以后再删除这张表。
+   2. 改表名的时候，要求给表名加固定的后缀（比如加 _to_be_deleted)，然后删除表的动作必须通过管理系统执行。并且，管理系删除表的时候，只能删除固定后缀的表。
+
+#### rm 删除数据
+其实，对于一个有高可用机制的 MySQL 集群来说，最不怕的就是 rm 删除数据了。只要不是恶意地把整个集群删除，而只是删掉了其中某一个节点的数据的话，HA 系统就会开始工作，选出一个新的主库，从而保证整个集群的正常工作。
+
+这时，要做的就是在这个节点上把数据恢复回来，再接入整个集群。
+
+当然了，现在不止是 DBA 有自动化系统，SA（系统管理员）也有自动化系统，所以也许一个批量下线机器的操作，会让整个 MySQL 集群的所有节点都全军覆没。应对这种情况，建议只能是说尽量把备份跨机房，或者最好是跨城市保存。
+
+
+## # 为什么还有kill不掉的语句？
